tests/trybuild_tests_src/pod_derive_failure.stderr
error: Pod requires cannot be derived for structs containing generic parameters because the padding requirements can't be verified for generic structs
 --> $DIR/pod_derive_failure.rs:4:10
  |
4 | #[derive(Pod)]
  |          ^^^

error: Pod requires the struct to be #[repr(C)] or #[repr(transparent)]
  --> $DIR/pod_derive_failure.rs:10:20
   |
10 | #[derive(Zeroable, Pod)]
   |                    ^^^

error: cannot find derive macro `Zeroable` in this scope
  --> $DIR/pod_derive_failure.rs:10:10
   |
10 | #[derive(Zeroable, Pod)]
   |          ^^^^^^^^

error: cannot find derive macro `Zeroable` in this scope
  --> $DIR/pod_derive_failure.rs:14:10
   |
14 | #[derive(Zeroable, Pod)]
   |          ^^^^^^^^

error[E0277]: the trait bound `Padding: std::marker::Copy` is not satisfied
  --> $DIR/pod_derive_failure.rs:14:20
   |
14 | #[derive(Zeroable, Pod)]
   |                    ^^^ the trait `std::marker::Copy` is not implemented for `Padding`

error[E0277]: the trait bound `Padding: bytemuck::zeroable::Zeroable` is not satisfied
  --> $DIR/pod_derive_failure.rs:14:20
   |
14 | #[derive(Zeroable, Pod)]
   |                    ^^^ the trait `bytemuck::zeroable::Zeroable` is not implemented for `Padding`
